# ogc-mcp-server

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docker/: Dockerfile  entrypoint.sh
docker/pygeoapi/: pygeoapi-config.yml
docker/pygeoapi/data/: parks.geojson
docker/pygeoapi/processes/: cool_spot_demo.py  geospatial_buffer.py
examples/: autonomous_demo.py  explore_ogc.py  gemini_mcp_demo.py  ogc_exploration.http  test_mcp_client.py  test_multi_server.py  test_stage3.py  test_stage5_e2e.py  test_stage5_part2.py  test_stage5_part3.py
schemas/: MAPPING_RATIONALE.md  mapping-summary.md  ogc-mcp-mapping-instance.json  ogc-mcp-mapping.schema.json
src/ogc_mcp/: __init__.py  catalog_discovery.py  mapper.py  ogc_client.py  ogc_tiles.py  server.py
tests/: test_catalog_discovery.py  test_ogc_client.py  test_ogc_tiles.py  test_schema_mapping.py
