[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ogc-mcp-server"
version = "0.1.0"
description = "MCP server bridging LLMs with OGC APIs — GSoC 2026 @ 52°North"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
  { name = "Hanzila Bin Younus", email = "hanzilabinyounus@gmail.com" }
]
keywords = ["mcp", "ogc", "geospatial", "llm", "gis"]

dependencies = [
  "fastmcp>=0.1.0",
  "httpx>=0.24.0",
  "python-dotenv>=1.0.0",
  "google-genai>=1.0.0",
  "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/hanzila1/ogc-mcp-server"
Repository = "https://github.com/hanzila1/ogc-mcp-server"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
